[gd_scene load_steps=3 format=3 uid="uid://b60a0vo5c8tfl"]

[ext_resource type="Texture2D" uid="uid://cc3ftdmgpqeel" path="res://GameAssets/Assets/godot-icon.png" id="1_shaur"]
[ext_resource type="Script" path="res://Scenes and Scripts/SkillButton.gd" id="2_jmf1j"]

[node name="SkillButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.13287, 3.13287)
toggle_mode = true
texture_normal = ExtResource("1_shaur")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_jmf1j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "0/3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Line2D" type="Line2D" parent="."]
top_level = true
z_index = -1
width = 7.0
default_color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
